@@ -19636,6 +19636,12 @@ void menu_hardware_tbblue_core_version(MENU_ITEM_PARAMETERS)
 
 }
 
+void menu_hardware_joystick_fire_key(MENU_ITEM_PARAMETERS)
+{
+    joystick_defined_key_fire++;
+    if (joystick_defined_key_fire==4) joystick_defined_key_fire=0;
+}
+
 //menu hardware settings
 void menu_hardware_settings(MENU_ITEM_PARAMETERS)
 {
@@ -19675,6 +19681,17 @@ void menu_hardware_settings(MENU_ITEM_PARAMETERS)
 
 		
 		}
+
+
+        //Aunque no todas las máquinas tienen joystick, es importante que esta opción siempre aparezca
+        //pues al activar una tecla como fire (por ejemplo right shift) hace que esa tecla ya no se comporte como right shift, sino solo fire
+        //esto en Z88 podria ser critico, pues no funcionaria el right shift y ademas el usuario no podria reasignar el fire a home y dejar 
+        //right shift como right shift del Z88
+                    menu_add_item_menu_format(array_menu_hardware_settings,MENU_OPCION_NORMAL,menu_hardware_joystick_fire_key,NULL,"[%s] Fire key",
+                joystick_defined_fire_texto[joystick_defined_key_fire]);
+            menu_add_item_menu_tooltip(array_menu_hardware_settings,"Define which key triggers the fire function for the joystick");
+            menu_add_item_menu_ayuda(array_menu_hardware_settings,"Define which key triggers the fire function for the joystick");
+
 
 
 		if (MACHINE_IS_SPECTRUM) {
